fix(tabs): fix tabs content text align issue

--- a/src/components/tabs/themes/tabs.base.scss
+++ b/src/components/tabs/themes/tabs.base.scss
@@ -11,6 +11,7 @@
     overflow: hidden;
     position: relative;
     height: 100%;
+    text-align: initial;
 }
 
 %fake-column {
